# ml-launchpad

./: .gitignore  .mcp.json  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.claude/: settings.json
.claude/agents/: eda-agent.md  model-agent.md
.claude/commands/: analyze.md  dashboard.md  eda.md  experiment.md  fullrun.md  model.md  promote.md  report.md  setup.md
config/: project.yml.example
data/sample/: ecommerce.csv  generate_sample.py
docker/: Dockerfile  docker-compose.yml
outputs/reports/: eda_report.md  model_results.md
src/dashboard/: app.py
src/eda/: profiler.py  report.py
src/experiments/: tracker.py
src/ingest/: csv_loader.py  schema_registry.py
src/models/: base.py  segmentation.py  supervised.py
src/serving/: api.py
tests/: test_eda.py  test_ingest.py  test_models.py
